# benchmarking

./: .gitignore  constraints.txt  pyproject.toml  requirements.txt  setup.py
conf/: experiments.yaml  experiments_test.yaml  visualizations.yaml
conf/data/: custom.yaml  ecg.yaml  electricity.yaml  emg.yaml  energy_power.yaml  epilepsy.yaml  etth1.yaml  etth2.yaml  ettm1.yaml  ettm2.yaml  exchange_rate.yaml  fd-a.yaml  fd-b.yaml  gesture.yaml  har.yaml  horizontal_dip.yaml  illness.yaml  m4_daily.yaml  m4_hourly.yaml  nab.yaml  ran_2025.yaml  seattle_trail.yaml  sleep_eeg.yaml  smd.yaml  traffic.yaml  weather.yaml
conf/metrics/: accuracy.yaml  auroc_auprc.yaml  confusion_matrix.yaml  f1.yaml  mae.yaml  normalized_confusion_matrix.yaml  pointwise_f1.yaml  pointwise_precision.yaml  pointwise_recall.yaml  precision.yaml  recall.yaml  rmse.yaml  s_mape.yaml  smape.yaml
conf/models/: arima.yaml  lstm.yaml  multi_view_classifier.yaml  multi_view_detector.yaml  multi_view_forecaster.yaml  multi_view_log_sig_classifier.yaml  prophet.yaml  raw_classifier.yaml  raw_forecaster.yaml  sarima.yaml  stat_threshold.yaml
conf/plots/: line.yaml  line_daily.yaml  line_weekly.yaml  point.yaml
conf/preprocessing/: difference.yaml  log_sig_time_aug_samplewise.yaml  log_sig_windowed_samplewise.yaml  moving_average.yaml  multi_view_constrastive_non_samplewise.yaml  multi_view_contrastive.yaml  no_preproc.yaml  normalization.yaml  pipeline_1.yaml  rescale.yaml  resize.yaml
conf/tasks/: anomaly.yaml  classification.yaml  forecasting.yaml
results/: summary_20251208_143218.yaml
(+78 files in other folders)
